--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -29,6 +29,38 @@ layout: default
 
         {{ content }}
 
+        <!-- Home Portfolio List -->
+        {% for portfolio in site.portfolio limit : 5 %}
+
+        <article class="post-preview">
+          <a href="{{ portfolio.url | prepend: site.baseurl | replace: '//', '/' }}">
+            <h2 class="post-title">{{ portfolio.title }}</h2>
+            {% if portfolio.subtitle %}
+            <h3 class="post-subtitle">{{ portfolio.subtitle }}</h3>
+            {% else %}
+            <h3 class="post-subtitle">{{ portfolio.excerpt | strip_html | truncatewords: 15 }}</h3>
+            {% endif %}
+          </a>
+          <p class="post-meta">Posted by
+            {% if portfolio.author %}
+            {{ portfolio.author }}
+            {% else %}
+            {{ site.author }}
+            {% endif %}
+            on
+            {{ portfolio.date | date: '%B %d, %Y' }} &middot; {% include read_time.html content=portfolio.content %}            
+          </p>
+        </article>
+
+        <hr>
+
+        {% endfor %}
+
+        <!-- Pager -->
+        <div class="clearfix">
+          <a class="btn btn-primary float-right" href="{{"/portfolio" | relative_url }}">View All My Portfolio &rarr;</a>
+        </div>
+
         <!-- Home Post List -->
         {% for post in site.posts limit : 5 %}
 
@@ -58,7 +90,7 @@ layout: default
 
         <!-- Pager -->
         <div class="clearfix">
-          <a class="btn btn-primary float-right" href="{{"/posts" | relative_url }}">View All Posts &rarr;</a>
+          <a class="btn btn-primary float-right" href="{{"/posts" | relative_url }}">View All My Posts &rarr;</a>
         </div>
 
       </div>
