--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,19 @@ layout: default
 ---
 
 <!-- Page Header -->
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    .responsive {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+  </style>
+</head>
+
 {% if page.background %}
 <header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
   {% else %}
