Some aesthetic changes

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,15 @@ layout: default
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    .responsive {
+    .responsive-img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      border: 5px solid #b2afea;
+    }
+    .responsive-gif {
       max-width: 100%;
       height: auto;
       display: block;
