--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -47,9 +47,11 @@ layout: default
             {% else %}
             <h3 class="post-subtitle">{{ portfolio.excerpt | strip_html | truncatewords: 15 }}</h3>
             {% endif %}
+            <br>
             {% if portfolio.icon %}
-            <img class="post-icon"  src="{{ portfolio.icon | prepend: site.baseurl | replace: '//', '/' }}" alt="img">
+            <img class="post-icon-gif"  src="{{ portfolio.icon | prepend: site.baseurl | replace: '//', '/' }}" alt="img">
             {% endif %}
+            <br>
           </a>
           <p class="post-meta">
             {{ portfolio.date | date: '%B %d, %Y' }} &middot; {% include read_time.html content=portfolio.content %}            
@@ -79,6 +81,11 @@ layout: default
             {% else %}
             <h3 class="post-subtitle">{{ post.excerpt | strip_html | truncatewords: 15 }}</h3>
             {% endif %}
+            <br>
+            {% if post.icon %}
+            <img class="post-icon-img" src="{{ post.icon | prepend: site.baseurl | replace: '//', '/' }}" alt="img">
+            {% endif %}
+            <br>
           </a>
           <p class="post-meta">
             {{ post.date | date: '%B %d, %Y' }} &middot; {% include read_time.html content=post.content %}            
