--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,6 +21,20 @@ layout: default
       margin-left: auto;
       margin-right: auto;
     }
+    .video-responsive {
+	    height: 0;
+	    overflow: hidden;
+	    padding-bottom: 56.25%;
+	    padding-top: 30px;
+	    position: relative;
+	  }
+    .video-responsive iframe, .video-responsive object, .video-responsive embed {
+      height: 100%;
+      left: 0;
+      position: absolute;
+      top: 0;
+      width: 100%;
+	  }
   </style>
 </head>
 
