Blockout Level post añadido y About actualizado

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -54,8 +54,8 @@ layout: default
             <br>
           </a>
           <p class="post-meta">
-            {{ portfolio.date | date: '%B %d, %Y' }} &middot; {% include read_time.html content=portfolio.content %}            
-          </p>
+            <!--{{ portfolio.date | date: '%B %d, %Y' }} &middot; {% include read_time.html content=portfolio.content %}            
+          </p>-->
         </article>
 
         <hr>
